feat(kafka): compose recoverable compaction pass